# Sentiment_Classifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  train.py
app/: main.py  model.py  schemas.py  utils.py
research/: 01_Test_Sentiment.ipynb  02_dataset.ipynb  03_train_colab.ipynb
