[project]
name = "sentiment-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.135.1",
    "git-lfs>=1.6",
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
